--- a/FilmLibrary/FilmLibrary.csproj
+++ b/FilmLibrary/FilmLibrary.csproj
@@ -52,6 +52,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IService1.cs" />
+    <Compile Include="Les_Modeles\Actor.cs" />
+    <Compile Include="Les_Modeles\Adresse.cs" />
+    <Compile Include="Les_Modeles\Category.cs" />
+    <Compile Include="Les_Modeles\City.cs" />
+    <Compile Include="Les_Modeles\Country.cs" />
+    <Compile Include="Les_Modeles\Customer.cs" />
+    <Compile Include="Les_Modeles\Film.cs" />
+    <Compile Include="Les_Modeles\Language.cs" />
+    <Compile Include="Les_Modeles\Payment.cs" />
+    <Compile Include="Les_Modeles\Rental.cs" />
+    <Compile Include="Les_Modeles\Staff.cs" />
+    <Compile Include="Les_Modeles\Store.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service1.cs" />
   </ItemGroup>
