Implementation des classes

--- a/FilmLibrary/App.config
+++ b/FilmLibrary/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -15,27 +15,30 @@
   <system.serviceModel>
     <services>
       <service name="FilmLibrary.Service1">
+        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.IService1">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8733/Design_Time_Addresses/FilmLibrary/Service1/" />
           </baseAddresses>
         </host>
-        <!-- Service Endpoints -->
-        <!-- À moins qu'elle ne soit complète, l'adresse est relative à l'adresse de base fournie ci-dessus -->
-        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.IService1">
-          <!-- 
-              Lors du déploiement, l'élément d'identité suivant doit être supprimé ou remplacé pour refléter 
-              l'identité sous laquelle le service déployé s'exécute.  En cas de suppression, WCF déduira automatiquement une identité 
-              appropriée.
-          -->
+      </service>
+      <service name="FilmLibrary.Services_Interfaces.ActorService">
+        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.Services_Interfaces.IActorService">
           <identity>
             <dns value="localhost" />
           </identity>
         </endpoint>
-        <!-- Metadata Endpoints -->
-        <!-- Le point de terminaison de l'échange de métadonnées est utilisé par le service pour se décrire aux clients. -->
-        <!-- Ce point de terminaison n'utilise pas de liaison sécurisée et doit être sécurisé ou supprimé avant le déploiement -->
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/FilmLibrary.Services_Interfaces/ActorService/" />
+          </baseAddresses>
+        </host>
       </service>
     </services>
     <behaviors>
@@ -62,4 +65,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+
+<connectionStrings>
+  <add name="FilmLibrary" connectionString="data source=.; initial catalog=ProjetServer; integrated security=true" providerName="System.Data.SqlClient" ></add>
+</connectionStrings>
 </configuration>
