Implementation des classes

--- a/FilmLibrary/App.config
+++ b/FilmLibrary/App.config
@@ -40,6 +40,58 @@
           </baseAddresses>
         </host>
       </service>
+      <service name="FilmLibrary.Services_Interfaces.AdresseService">
+        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.Services_Interfaces.IAdresseService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/FilmLibrary.Services_Interfaces/AdresseService/" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service name="FilmLibrary.Services_Interfaces.CategoryService">
+        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.Services_Interfaces.ICategoryService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/FilmLibrary.Services_Interfaces/CategoryService/" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service name="FilmLibrary.Services_Interfaces.CityService">
+        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.Services_Interfaces.ICityService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/FilmLibrary.Services_Interfaces/CityService/" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service name="FilmLibrary.Services_Interfaces.CountryService">
+        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.Services_Interfaces.ICountryService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/FilmLibrary.Services_Interfaces/CountryService/" />
+          </baseAddresses>
+        </host>
+      </service>
     </services>
     <behaviors>
       <serviceBehaviors>
