ajout de quelques interfaces

--- a/FilmLibrary/App.config
+++ b/FilmLibrary/App.config
@@ -92,6 +92,84 @@
           </baseAddresses>
         </host>
       </service>
+      <service name="FilmLibrary.Services_Interfaces.CustomerService">
+        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.Services_Interfaces.ICustomerService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/FilmLibrary.Services_Interfaces/CustomerService/" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service name="FilmLibrary.Services_Interfaces.FilmService">
+        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.Services_Interfaces.IFilmService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/FilmLibrary.Services_Interfaces/FilmService/" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service name="FilmLibrary.Services_Interfaces.PaymentServce">
+        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.Services_Interfaces.IPaymentServce">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/FilmLibrary.Services_Interfaces/PaymentServce/" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service name="FilmLibrary.Services_Interfaces.InventoryService">
+        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.Services_Interfaces.IInventoryService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/FilmLibrary.Services_Interfaces/InventoryService/" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service name="FilmLibrary.Services_Interfaces.LanguageService">
+        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.Services_Interfaces.ILanguageService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/FilmLibrary.Services_Interfaces/LanguageService/" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service name="FilmLibrary.Services_Interfaces.RentalService">
+        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.Services_Interfaces.IRentalService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/FilmLibrary.Services_Interfaces/RentalService/" />
+          </baseAddresses>
+        </host>
+      </service>
     </services>
     <behaviors>
       <serviceBehaviors>
