--- a/FilmLibrary/App.config
+++ b/FilmLibrary/App.config
@@ -170,6 +170,32 @@
           </baseAddresses>
         </host>
       </service>
+      <service name="FilmLibrary.Services_Interfaces.StaffServce">
+        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.Services_Interfaces.IStaffServce">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/FilmLibrary.Services_Interfaces/StaffServce/" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service name="FilmLibrary.Services_Interfaces.StoreService">
+        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.Services_Interfaces.IStoreService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/FilmLibrary.Services_Interfaces/StoreService/" />
+          </baseAddresses>
+        </host>
+      </service>
     </services>
     <behaviors>
       <serviceBehaviors>
