fix virtual in classes

--- a/FilmLibrary/App.config
+++ b/FilmLibrary/App.config
@@ -206,10 +206,24 @@
           <!-- Pour recevoir les détails de l'exception dans les erreurs à des fins de débogage, 
           définissez la valeur ci-dessous sur true.  Pour éviter la divulgation d'informations d'exception, 
           définissez-la sur false avant le déploiement -->
-          <serviceDebug includeExceptionDetailInFaults="False" />
+          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
+          <serviceDebug includeExceptionDetailInFaults="True" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
+    <bindings>
+      <basicHttpBinding>
+        <binding maxBufferPoolSize="2147483647"
+                 maxBufferSize="2147483647"
+                 maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="2147483647" 
+                        maxStringContentLength="2147483647"
+                        maxArrayLength="2147483647"
+                        maxBytesPerRead="2147483647"
+                        maxNameTableCharCount="2147483647" />
+        </binding>
+      </basicHttpBinding>
+    </bindings>
   </system.serviceModel>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
