--- a/FilmLibrary/App.config
+++ b/FilmLibrary/App.config
@@ -13,6 +13,17 @@
   <!-- Lors du déploiement du projet de bibilothèque de services, le contenu du fichier de configuration doit être ajouté au fichier app.config  
   de l'hôte. System.Configuration ne prend pas en charge les fichiers de configuration des bibliothèques. -->
   <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="MyConfig" maxReceivedMessageSize="2147483647"
+        maxBufferSize="2147483647"
+        maxBufferPoolSize="2147483647">
+          <readerQuotas maxDepth="32"
+          maxArrayLength="2147483647"
+          maxStringContentLength="2147483647"/>
+        </binding>
+      </basicHttpBinding>
+    </bindings>
     <services>
       <service name="FilmLibrary.Service1">
         <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.IService1">
@@ -171,7 +182,7 @@
         </host>
       </service>
       <service name="FilmLibrary.Services_Interfaces.StaffServce">
-        <endpoint address="" binding="basicHttpBinding" contract="FilmLibrary.Services_Interfaces.IStaffServce">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="MyConfig" contract="FilmLibrary.Services_Interfaces.IStaffServce">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -207,23 +218,11 @@
           définissez la valeur ci-dessous sur true.  Pour éviter la divulgation d'informations d'exception, 
           définissez-la sur false avant le déploiement -->
           <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
-          <serviceDebug includeExceptionDetailInFaults="True" />
+          <serviceDebug includeExceptionDetailInFaults="False" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <bindings>
-      <basicHttpBinding>
-        <binding maxBufferPoolSize="2147483647"
-                 maxBufferSize="2147483647"
-                 maxReceivedMessageSize="2147483647">
-          <readerQuotas maxDepth="2147483647" 
-                        maxStringContentLength="2147483647"
-                        maxArrayLength="2147483647"
-                        maxBytesPerRead="2147483647"
-                        maxNameTableCharCount="2147483647" />
-        </binding>
-      </basicHttpBinding>
-    </bindings>
+    
   </system.serviceModel>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
